# rdf-fastapi-utils

./: README.md  pyproject.toml
.github/workflows/: release.yml
rdf_fastapi_utils/: models.py
rdf_fastapi_utils/tests/: baseclass_test.py  intavia_baseclass_test.py
